--- a/src/app/components/pages/flights-grid-left/content/content.component.html
+++ b/src/app/components/pages/flights-grid-left/content/content.component.html
@@ -870,10 +870,11 @@
                                             </div>
 
                                             <!----------Mobile--------------->
-                                            <div class="row mobileView">
+                                            <div class="row mobileView mb-2">
                                                 <div class="col-lg-4 d-flex" style="padding-right: 0px;">
 
                                                     <div class="col-lg-1">
+                                                       
                                                         <button class="flght-details" role="button"
                                                             (click)="viewData(modalViewPopUP,item)" href="#">Flight
                                                             details</button>
@@ -885,6 +886,11 @@
                                                                
                                                     </div>
                                                     <div class="col-lg-2" style="padding-right: 0px;align-items: end;">
+                                                        
+                                                        <span style="padding: 0px 5px;background: rgb(232, 246, 248);color: rgb(2, 100, 122);
+                                                        border-radius: 2px;"> 
+                                                            <i class="fas fa-award"></i>  Best value</span>
+                                                        <br>
                                                         <button type="button" class="btn-select-flght"
                                                                 (click)="navToBookFlight(item)">
                                                                 Select flight <i style="padding-left: 5px;font-size: 12px;"
