--- a/src/styles.css
+++ b/src/styles.css
@@ -846,6 +846,10 @@ margin-top: 10px;
   margin-top: 15px;
 }
 
+.jdj{
+  font-size: 567%;
+}
+
 .webView{display:block  !important;}
 .mobileView{display: none!important;}
 
