--- a/src/app/components/pages/booking/content/content.component.html
+++ b/src/app/components/pages/booking/content/content.component.html
@@ -3,17 +3,17 @@
         <div class="row">
             <div class="col-12">
                 <div class="tabs">
-                    <ul ngbNav #nav="ngbNav" class="custom-flex nav nav-tabs">
+                    <div ngbNav #nav="ngbNav" class="custom-flex ">
                        
-                        <li [ngbNavItem]="1">
+                        <!-- <li [ngbNavItem]="1">
                             <a ngbNavLink>Flights Booking</a>
-                            <ng-template ngbNavContent>
+                            <ng-template ngbNavContent> -->
                                 <app-flight-booking></app-flight-booking>
-                            </ng-template>
+                            <!-- </ng-template>
                         </li>
-                       
-                    </ul>
-                    <div [ngbNavOutlet]="nav" class="bg-custom-white bx-wrapper padding-20"></div>
+                        -->
+                    </div>
+                    <!-- <div [ngbNavOutlet]="nav" class="bg-custom-white bx-wrapper padding-20"></div> -->
                 </div>
             </div>
         </div>
