--- a/src/styles.css
+++ b/src/styles.css
@@ -847,6 +847,183 @@ margin-top: 10px;
 }
 
 
+/*************flight-booking****************/
+.sin-in{
+  background: white;
+  border-width: 1px 1px 0px;
+  border-top-style: solid;
+  border-right-style: solid;
+  border-left-style: solid;
+  border-top-color: rgb(189, 189, 189);
+  border-right-color: rgb(189, 189, 189);
+  border-left-color: rgb(189, 189, 189);
+  border-image: initial;
+  border-bottom-style: initial;
+  border-bottom-color: initial;
+  padding: 8px 20px;
+  border-top-right-radius: 2px;
+  border-top-left-radius: 2px;
+}
+.text-head-1{
+  font-size: 16px;
+    font-weight: 600;
+}
+.text-sign-in{
+  color: rgb(2, 100, 122);
+  text-decoration: underline;
+  cursor: pointer;
+  margin-right: 5px;
+  font-weight: 600;
+}
+.card-tra-det{
+  border: 1px solid rgb(204, 204, 204);
+  padding: 20px;
+  border-radius: 2px;
+  background-color: white;
+  margin-bottom: 20px;
+    padding-bottom: 0px;
+}
+.card-body{
+  margin-left: -20px;
+    margin-right: -20px;
+ 
+}
+.p-text{
+  font-size: 14px;
+  font-weight: 600;
+  padding: 10px;
+  background: rgb(244, 255, 242);
+  color: rgb(29, 172, 8);
+  margin: 0px;
+  width: 100%;
+}
+.p-text-2{
+  font-size: 14px;
+  font-weight: 600;
+  padding: 10px;
+  background: rgb(255, 249, 240);
+  color: rgb(236, 152, 68);
+  margin: 0px;
+  width: 100%;
+}
+.warings{
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+}
+.frm-1{
+  position: relative;
+    margin: 0px -5px 20px;
+}
+.box-1-fname{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  cursor: pointer;
+}
+.lable-1{
+  font-size: 14px;font-weight: 600;color: rgb(58, 58, 58);
+}
+.select-fn{
+  display: block;
+    width: 100%;
+    height: 40px;
+    font-size: 14px;
+    line-height: 1.5;
+    color: rgb(73, 80, 87);
+    background-color: rgb(255, 255, 255);
+    background-clip: padding-box;
+    transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
+    border-radius: 2px;
+    border: 1px solid rgb(204, 204, 204);
+    appearance: none;
+    background-position: right 0.5em top 50%;
+    background-repeat: no-repeat;
+    
+    padding: 0.5em;
+}
+.card-2{
+  display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    color: rgb(35, 165, 185);
+    font-size: 14px;
+    font-weight: 600;
+    cursor: pointer;
+    user-select: none;
+}
+.card-3{
+  display: flex;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    align-items: center;
+    margin-bottom: 60px;
+}
+.border-rgt{
+  border: 1px dashed rgb(204, 204, 204);
+    border-radius: 2px;
+    padding-bottom: 20px;
+    background: rgb(255, 255, 255);
+}
+.heading-rgt-1{
+  margin-top: 20px;
+    display: flex;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    align-items: center;
+    margin-bottom: 15px;
+}
+.flight-detl-rgt{
+  font-size: 12px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: rgb(2, 100, 122);
+}
+.cabin-card-main{
+  display: flex;
+                        -webkit-box-pack: justify;
+                        justify-content: space-between;
+                        -webkit-box-align: center;
+                        align-items: center;
+                        margin-bottom: 60px;
+}
+.cabin-card{
+  flex: 1 1 0%;
+                            border-right: 1px solid rgb(204, 204, 204);
+                            padding-right: 20px;
+                            margin-right: 20px;
+}
+.cabin_baggage{
+  display: flex; -webkit-box-pack: justify; justify-content: space-between;
+   align-items: flex-start;margin-bottom: 15px;
+}
+.cabin-text{
+  font-size: 14px;font-weight: normal;color: rgb(58, 58, 58);
+}
+.add-extra-baggage{
+  flex: 1 1 0%;
+                            display: flex;
+                            -webkit-box-align: center;
+                            align-items: center;
+                            cursor: pointer;
+                            font-size: 14px;
+                            font-weight: 600;
+                            user-select: none;
+                            color: rgb(2, 100, 122);
+}
+
+/***********flight-booking******************/
+
+
+
+
 
 .webView{display:block  !important;}
 .mobileView{display: none!important;}
@@ -868,6 +1045,7 @@ margin-top: 10px;
     margin-bottom: 10px;
     font-size: 12px !important;
 }
+
 .row{
   padding-right: 3px;
   padding-left: 3px;
